--- a/style.css
+++ b/style.css
@@ -8,12 +8,24 @@ body {
   background-color: #f9f9f9;
 }
 
+.website {
+  margin: 30px;
+}
+
 .section {
   margin-bottom: 30px;
 }
 
 .content {
   margin: 15px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.color-gray {
+  color: rgb(78, 78, 78);
 }
 /* .thing {
   margin: 50px auto;
@@ -85,4 +97,15 @@ nav > ul > li {
 .code {
   background-color: #f5f5f5;
   color: #dc143c;
+}
+
+.cards {
+  display: flex;
+  margin: 80px;
+}
+.card {
+  flex: 1;
+  text-align: left;
+  padding-left: 50px;
+  padding-right: 50px;
 }
