--- a/style.css
+++ b/style.css
@@ -101,11 +101,30 @@ nav > ul > li {
 
 .cards {
   display: flex;
-  margin: 80px;
+  margin: 10%;
 }
 .card {
   flex: 1;
   text-align: left;
-  padding-left: 50px;
-  padding-right: 50px;
+  margin-right: 10%;
+}
+.last {
+  margin-right: 0;
+}
+
+.faq {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+.single-faq {
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  padding: 10px;
+  background-color: white;
+  margin-bottom: 20px;
+}
+
+.single-faq > p {
+  margin-bottom: 20px;
 }
