--- a/style.css
+++ b/style.css
@@ -8,8 +8,18 @@ body {
   background-color: #f9f9f9;
 }
 
-.website {
+hr {
+  margin: 30px 0;
+}
+
+h2 {
+  margin-bottom: 20px;
+}
+
+.container {
   margin: 30px;
+  margin-right: 10%;
+  margin-left: 10%;
 }
 
 .section {
@@ -27,26 +37,16 @@ body {
 .color-gray {
   color: rgb(78, 78, 78);
 }
-/* .thing {
-  margin: 50px auto;
-  border: 2px;
-  border-style: solid;
-  width: 50%;
-  justify-content: center;
-} */
 
 header {
   background-color: #0031ca;
   text-align: center;
   margin: auto;
-  margin-bottom: 20px;
-
   border-bottom: solid black;
 }
 
 .title {
   color: white;
-  /* margin: 1px auto; */
   padding: 40px;
 }
 
@@ -62,14 +62,12 @@ nav > ul {
   width: 100%;
   display: flex;
   list-style-type: none;
-  border-style: solid;
   justify-content: center;
 }
 
 nav > ul > li {
   display: inline;
   margin: 20px;
-  /* border-style: solid; */
 }
 
 .shortenBox {
@@ -80,7 +78,6 @@ nav > ul > li {
   text-align: center;
   margin: auto;
   width: 60%;
-  /* height: 60px; */
   padding: 8px;
 
   padding-top: 30px;
@@ -88,34 +85,16 @@ nav > ul > li {
   margin-bottom: 30px;
 }
 
-/* input {
-  border-style: solid;
-  border-width: 5px;
-  border-color: blue;
-} */
-
-.code {
-  background-color: #f5f5f5;
-  color: #dc143c;
-}
-
 .cards {
   display: flex;
-  margin: 10%;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  gap: 5rem;
 }
 .card {
-  flex: 1;
   text-align: left;
-  margin-right: 10%;
-}
-.last {
-  margin-right: 0;
 }
 
-.faq {
-  margin-left: 10%;
-  margin-right: 10%;
-}
 .single-faq {
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
@@ -127,4 +106,23 @@ nav > ul > li {
 
 .single-faq > p {
   margin-bottom: 20px;
+}
+
+footer {
+  background-color: #b8c1f8;
+  padding: 20px;
+  border-top: solid black;
+}
+
+table,
+th,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  margin: auto;
+}
+th,
+td {
+  padding: 5px;
+  text-align: left;
 }
